--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -16,14 +16,44 @@
       </div> -->
       <div class="form-group">
         <label for="email" class="sr-only">邮箱</label>
-        <input id="email" type="email" class="form-control" placeholder="邮箱" autofocus>
+        <input id="email" type="email" value="itheima@itcast.cn" class="form-control" placeholder="邮箱" autofocus>
       </div>
       <div class="form-group">
         <label for="password" class="sr-only">密码</label>
-        <input id="password" type="password" class="form-control" placeholder="密码">
+        <input id="password" type="password" value="123456" class="form-control" placeholder="密码">
       </div>
-      <button class="btn btn-primary btn-block">登 录</button>
+      <button class="btn btn-primary btn-block" id="loginBtn">登 录</button>
     </div>
   </div>
+  <script src="../assets/vendors/jquery/jquery.min.js"></script>
+  <script type="text/javascript">
+    $('#loginBtn').on('click',()=>{
+      let email = $('#email').val();
+      let password = $('#password').val();
+      if(email.trim().length === 0) {
+        alert('请输入邮箱');
+        return;
+      }
+      if(password.trim().length === 0){
+        alert('请输入密码');
+        return;
+      }
+
+      $.ajax({
+        type:'post',
+        url:'/login',
+        data:{
+          email,
+          password
+        },
+        error:function(){
+          alert('邮箱或密码错误');
+        },
+        success:function(response){
+          location.href = 'index.html';
+        }
+      })
+    })
+  </script>
 </body>
 </html>
