修改信息最终版

--- a/public/admin/users.html
+++ b/public/admin/users.html
@@ -164,7 +164,7 @@
       {{/each}}
   </script>
   <script type="text/html" id="modifyTpl">
-     <form id="modifyForm">
+     <form id="modifyForm" data-id="{{_id}}">
             <h2>修改新用户</h2>
             <div class="form-group">
               <label>头像</label>
