--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -26,34 +26,42 @@
     </div>
   </div>
   <script src="../assets/vendors/jquery/jquery.min.js"></script>
-  <script type="text/javascript">
-    $('#loginBtn').on('click',()=>{
-      let email = $('#email').val();
-      let password = $('#password').val();
-      if(email.trim().length === 0) {
-        alert('请输入邮箱');
+  <script>
+    // 选择登录按钮并为其添加点击事件
+    $('#loginBtn').on('click', function () {
+        // 获取用户输入的邮箱地址
+        var email = $('#email').val();
+        
+        // 获取用户输入的密码
+        var password = $('#password').val();
+        // 判断用户是否输入了邮箱地址
+        if (email.trim().length == 0) {
+        alert('请输入邮箱')
         return;
-      }
-      if(password.trim().length === 0){
+        }
+        // 判断用户是否输入了密码
+        if (password.trim().length == 0) {
         alert('请输入密码');
         return;
-      }
-
-      $.ajax({
-        type:'post',
-        url:'/login',
-        data:{
-          email,
-          password
-        },
-        error:function(){
-          alert('邮箱或密码错误');
-        },
-        success:function(response){
-          location.href = 'index.html';
         }
-      })
+        $.ajax({
+        type: 'post',
+        url: '/login',
+        data: {
+            email: email,
+            password: password
+        },
+        success: function (response) {
+            localStorage.setItem('user',JSON.stringify(response))
+            // 登录成功 跳转到数据管理的首页面
+            location.href = 'index.html';
+        },
+        error: function () {
+            // 登录失败
+            alert('用户名或者密码错误')
+        }
+        })
     })
-  </script>
+</script>
 </body>
 </html>
