--- a/public/admin/password-reset.html
+++ b/public/admin/password-reset.html
@@ -97,5 +97,6 @@
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script>NProgress.done()</script>
   <script src="../assets/js/commom.js"></script>
+  <script src="../assets/js/password-reset.js"></script>
 </body>
 </html>
