--- a/public/admin/post-add.html
+++ b/public/admin/post-add.html
@@ -28,47 +28,50 @@
       <!-- <div class="alert alert-danger">
         <strong>错误！</strong>发生XXX错误
       </div> -->
-      <form class="row">
+      <div id="parentBox">
+      <form class="row" id="addForm">
         <div class="col-md-9">
           <div class="form-group">
             <label for="title">标题</label>
             <input id="title" class="form-control input-lg" name="title" type="text" placeholder="文章标题">
           </div>
           <div class="form-group">
-            <label for="content">标题</label>
+            <label for="content">内容</label>
             <textarea id="content" class="form-control input-lg" name="content" cols="30" rows="10" placeholder="内容"></textarea>
           </div>
         </div>
         <div class="col-md-3">
           <div class="form-group">
-            <label for="feature">特色图像</label>
+            <label for="feature">文章封面</label>
             <!-- show when image chose -->
             <img class="help-block thumbnail" style="display: none">
             <input id="feature" class="form-control" name="feature" type="file">
+            <input type="hidden" name="thumbnail" id="thumbnail">
           </div>
           <div class="form-group">
             <label for="category">所属分类</label>
             <select id="category" class="form-control" name="category">
-              <option value="1">未分类</option>
-              <option value="2">潮生活</option>
+              
+              
             </select>
           </div>
           <div class="form-group">
             <label for="created">发布时间</label>
-            <input id="created" class="form-control" name="created" type="datetime-local">
+            <input id="created" class="form-control" name="createAt" type="datetime-local">
           </div>
           <div class="form-group">
             <label for="status">状态</label>
-            <select id="status" class="form-control" name="status">
-              <option value="drafted">草稿</option>
-              <option value="published">已发布</option>
+            <select id="status" class="form-control" name="state">
+              <option value="0">草稿</option>
+              <option value="1">已发布</option>
             </select>
           </div>
-          <div class="form-group">
+          <div class="form-group" id="addForm">
             <button class="btn btn-primary" type="submit">保存</button>
           </div>
         </div>
       </form>
+      </div>
     </div>
   </div>
 
@@ -113,5 +116,57 @@
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script>NProgress.done()</script>
   <script src="../assets/js/commom.js"></script>
+  <script type="text/html" id="categoryTpl">
+    {{each data}}
+    <option value="{{$value._id}}">{{$value.title}}</option>
+    {{/each}}
+ </script>
+ <script type="text/html" id="modifyTpl">
+  <form class="row" id="modifyForm" data-id={{_id}}>
+    <div class="col-md-9">
+      <div class="form-group">
+        <label for="title">标题</label>
+        <input id="title" class="form-control input-lg" type="text" placeholder="文章标题" name="title" value="{{title}}">
+      </div>
+      <div class="form-group">
+        <label for="content">内容</label>
+        <textarea id="content" class="form-control input-lg" cols="30" rows="10" placeholder="内容" name="content">{{content}}</textarea>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="form-group">
+        <label for="feature">文章封面</label>
+        <!-- show when image chose -->
+        <img class="help-block thumbnail" style="display: none">
+        <input id="feature" class="form-control" type="file">
+        <input type="hidden" name="thumbnail" id="thumbnail" value="{{thumbnail}}">
+      </div>
+      <div class="form-group">
+        <label for="category">所属分类</label>
+        <select id="category" class="form-control" name="category">
+          {{each categories}}
+            <option {{category == $value._id ? "selected" : ""}} value="{{$value._id}}">{{$value.title}}</option>
+          {{/each}}
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="created">发布时间</label>
+        <input id="created" class="form-control" type="date" name="createAt" value="{{createAt.split('T')[0]}}">
+      </div>
+      <div class="form-group">
+        <label for="status">状态</label>
+        <select id="status" class="form-control" name="state">
+          <option value="0" {{state == 0 ? "selected": ""}}>草稿</option>
+          <option value="1" {{state == 1 ? "selected": ""}}>已发布</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">修改</button>
+      </div>
+    </div>
+  </form>
+</script>
+ <script src="../assets/js/post-add.js"></script>
+ <script src="../assets/vendors/art-template/template-web.js"></script>
 </body>
 </html>
