--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8">
   <title>Posts &laquo; Admin</title>
@@ -9,6 +10,7 @@
   <link rel="stylesheet" href="../assets/css/admin.css">
   <script src="../assets/vendors/nprogress/nprogress.js"></script>
 </head>
+
 <body>
   <script>NProgress.start()</script>
 
@@ -28,23 +30,18 @@
       <div class="page-action">
         <!-- show when multiple checked -->
         <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
-        <form class="form-inline">
-          <select name="" class="form-control input-sm">
-            <option value="">所有分类</option>
+        <form class="form-inline" id="filterForm">
+          <select name="category" class="form-control input-sm" id="categoryBox">
+
           </select>
-          <select name="" class="form-control input-sm">
-            <option value="">所有状态</option>
-            <option value="">草稿</option>
-            <option value="">已发布</option>
+          <select name="state" class="form-control input-sm">
+            <option value="0">草稿</option>
+            <option value="1">已发布</option>
           </select>
           <button class="btn btn-default btn-sm">筛选</button>
         </form>
-        <ul class="pagination pagination-sm pull-right">
-          <li><a href="#">上一页</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">下一页</a></li>
+        <ul class="pagination pagination-sm pull-right" id="page">
+
         </ul>
       </div>
       <table class="table table-striped table-bordered table-hover">
@@ -58,40 +55,9 @@
             <th class="text-center" width="100">操作</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>随便一个名称</td>
-            <td>小小</td>
-            <td>潮科技</td>
-            <td class="text-center">2016/10/07</td>
-            <td class="text-center">已发布</td>
-            <td class="text-center">
-              <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
-          <tr>
-            <td>随便一个名称</td>
-            <td>小小</td>
-            <td>潮科技</td>
-            <td class="text-center">2016/10/07</td>
-            <td class="text-center">已发布</td>
-            <td class="text-center">
-              <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
-          <tr>
-            <td>随便一个名称</td>
-            <td>小小</td>
-            <td>潮科技</td>
-            <td class="text-center">2016/10/07</td>
-            <td class="text-center">已发布</td>
-            <td class="text-center">
-              <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
+        <tbody id="postsBox">
+
+
         </tbody>
       </table>
     </div>
@@ -133,10 +99,95 @@
       </li>
     </ul>
   </div>
-
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="exampleModalLabel">发布评论</h4>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="message-text" class="control-label">Message:</label>
+                <textarea class="form-control" id="message-text"></textarea>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="button" class="btn btn-primary addCom">发布</button>
+          </div>
+        </div>
+      </div>
+    </div>
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script>NProgress.done()</script>
   <script src="../assets/js/commom.js"></script>
+  <script src="../assets/vendors/art-template/template-web.js"></script>
+  <script type="text/html" id="postsTpl">
+    {{each records}}
+    <tr>
+        <td>{{$value.title}}</td>
+        <td>{{$value.author.nickName}}</td>
+        <td>{{$value.category.title}}</td>
+        <td class="text-center">{{$imports.formateDate($value.createAt)}}</td>
+        <td class="text-center">{{$value.state == 1 ? '已发布': '未发布'}}</td>
+        <td class="text-center">
+          <a href="post-add.html?id={{$value._id}}" class="btn btn-default btn-xs">编辑</a>
+          <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+          <a href="javascript:;" id='myModal' class="btn btn-success btn-xs postCom" data-id="{{$value._id}}">发表评论</a>
+        </td>
+      </tr>
+      {{/each}}
+  </script>
+  <script type="text/html" id="pageTpl">
+    {{if page >1}}
+    <li><a href="javascript:;" onclick="changePage({{page - 1}})">上一页</a></li>
+    {{/if}}
+    {{each display}}
+          <li><a href="javascript:;" onclick="({{$value}})">{{$value}}</a></li>
+    {{/each}}
+    {{if page < pages}}
+          <li><a href="javascript:;" onclick="changePage({{page + 1}})">下一页</a></li>
+    {{/if}}
+  </script>
+  <script type="text/html" id="categoryTpl">
+    {{each data}}
+    <option value="{{$value._id}}">{{$value.title}}</option>
+    {{/each}}
+  </script>
+  <script>
+    var id, userId;
+    $('#postsBox').on('click', ".postCom", function () {
+      id = $(this).data('id')
+      console.log(id, 678);
+      userId = JSON.parse(localStorage.getItem('user'))._id
+      console.log(userId, 444);
+      $('#exampleModal').modal('show')
+    })
+
+    /* 点击发布 */
+    $('.addCom').on('click', function () {
+      var content = $('#message-text').val()
+      console.log(content, 1111);
+      $.ajax({
+        type: 'post',
+        url: '/comments',
+        data: {
+          author: userId,
+          content: content,
+          post: id
+        },
+        success: function (res) {
+          console.log(res, 543);
+          $('#exampleModal').modal('hide')
+        }
+      })
+    })
+  </script>
+  <script src="../assets/js/posts.js"></script>
 </body>
+
 </html>
